--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "Altoros Chrono CLI",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=development node index.js"
   },
   "bin": "./index.js",
   "author": "Demian Rodriguez",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^2.4.1",
     "inquirer": "^6.1.0",
     "puppeteer": "^1.7.0",
     "table": "^4.0.3"
+  },
+  "devDependencies": {
+    "eslint": "^5.4.0"
   }
 }
